# nexo-lang

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: ast.h  environment.h  token.h  value.h
src/: main.c
src/checker/: checker.c  checker.h
src/interpreter/: interpreter.c  interpreter.h
src/lexer/: lexer.c  lexer.h  token.c
src/parser/: ast_print.c  parser.c  parser.h
src/runtime/: environment.c  value.c
tests/: dynamic.nx  exemplo.nx  oop.nx  oop_run.nx  parser.nx  protected.nx  reassign.nx  run.nx  static.nx  strict.nx  types.nx  visibility.nx
